# metricpilot-demo-factory

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: ADAPTER_SPEC_CLUBMED_PROXY.md  APP_SPEC.md  ARCHITECTURE.md  BLUEPRINT_SPEC.md  CANONICAL_SCHEMA.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_REVIEW_PROMPT.md  EXECUTION_PLAN.md  MODULE_SPEC.md  MVP_RUNBOOK.md  PROJECT_CONTEXT.md  PROSPECT_LIST.md  ROADMAP_SEED.md  TASK_LIST.md  TEST_PLAN.md
sample_data/: demo_registry_example.csv  metric_timeseries_example.csv  semantic_mapping_example.csv
src/metricpilot/: __init__.py  concern_classifier.py  contracts.py  fixtures.py  narrative_contract.py  schema_validator.py  segment_scanner.py  streamlit_app.py  trend_decomposer.py
src/metricpilot/adapters/: __init__.py  clubmed.py
tests/: conftest.py  test_adapter_clubmed.py  test_concern_classifier.py  test_contracts.py  test_fixtures.py  test_integration.py  test_narrative.py  test_schema_validator.py  test_segment_scanner.py  test_streamlit_app.py  test_trend_decomposer.py
