[build-system]
requires = ["setuptools==75.8.2", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "metricpilot-demo-factory"
version = "0.1.0"
description = "Deterministic analytics package foundation for MetricPilot demo factory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas==2.2.3",
  "pytest==8.3.5",
  "ruptures==1.1.9",
  "scipy==1.15.2",
  "statsmodels==0.14.4",
  "streamlit==1.44.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
