[build-system]
requires = ["setuptools==78.1.1", "wheel==0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "metricpilot-demo-factory"
version = "0.1.0"
description = "Deterministic analytics package foundation for MetricPilot demo factory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas==2.2.3",
  "pytest==9.0.3",
  "ruptures==1.1.9",
  "scipy==1.15.2",
  "statsmodels==0.14.4",
  "streamlit==1.44.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
